# src/main/kotlin/ru/tnsk/backend/data/db/mappers/FullRouteMapper.kt
@@ -3,7 +3,7 @@ package ru.tnsk.backend.data.db.mappers
 import ru.tnsk.backend.data.db.psql.entity.RouteEntity
 import ru.tnsk.backend.domain.model.transport.FullRoute
 
-fun RouteEntity.asFullRoute() = FullRoute(
+fun RouteEntity.asFullRoute(withStops: Boolean) = FullRoute(
     asRoute(),
-    traces.map { it.asTrace() }
+    traces.map { it.asTrace(withStops) }
 )
