# src/main/resources/openapi/documentation.yaml
@@ -9,28 +9,25 @@ paths:
   /:
     get:
       description: ""
-      responses:
-        "200":
-          description: "OK"
-          content:
-            text/plain:
-              schema:
-                type: "string"
-              examples:
-                Example#1:
-                  value: "Hello World!"
-    post:
+  /import:
+    get:
       description: ""
       responses:
-        "200":
-          description: "OK"
+        "204":
+          description: "No Content"
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/AuthResponse"
+                type: "object"
+        "401":
+          description: "Unauthorized"
+          content:
+            '*/*':
+              schema:
+                type: "object"
   /routes:
     get:
-      description: "asdasdasdasd"
+      description: ""
       parameters:
         - name: "type"
           in: "query"
@@ -73,35 +70,109 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/Route"
+                $ref: "#/components/schemas/FullRoute"
         "404":
           description: "Not Found"
           content:
             '*/*':
               schema:
                 type: "object"
-  /user/{login}:
+  /markers:
     get:
       description: ""
       parameters:
-        - name: "login"
-          in: "path"
+        - name: "type"
+          in: "query"
+          required: false
+          schema:
+            type: "string"
+        - name: "route"
+          in: "query"
+          required: false
+          schema:
+            type: "string"
+        - name: "Connection"
+          in: "header"
           required: true
+          description: "Websocket Connection parameter"
+          schema:
+            type: "string"
+        - name: "Upgrade"
+          in: "header"
+          required: true
+          description: "Websocket Upgrade parameter"
+          schema:
+            type: "string"
+        - name: "Sec-WebSocket-Key"
+          in: "header"
+          required: true
+          description: "Websocket Sec-WebSocket-Key parameter"
           schema:
             type: "string"
       responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
+        "101":
+          description: "Switching Protocols"
+          headers:
+            Connection:
+              required: true
               schema:
-                $ref: "#/components/schemas/User"
-        "404":
-          description: "Not Found"
-          content:
-            '*/*':
+                type: "string"
+            Upgrade:
+              required: true
               schema:
-                type: "object"
+                type: "string"
+            Sec-WebSocket-Accept:
+              required: true
+              schema:
+                type: "string"
+  /markers/json:
+    get:
+      description: ""
+      parameters:
+        - name: "type"
+          in: "query"
+          required: false
+          schema:
+            type: "string"
+        - name: "route"
+          in: "query"
+          required: false
+          schema:
+            type: "string"
+        - name: "Connection"
+          in: "header"
+          required: true
+          description: "Websocket Connection parameter"
+          schema:
+            type: "string"
+        - name: "Upgrade"
+          in: "header"
+          required: true
+          description: "Websocket Upgrade parameter"
+          schema:
+            type: "string"
+        - name: "Sec-WebSocket-Key"
+          in: "header"
+          required: true
+          description: "Websocket Sec-WebSocket-Key parameter"
+          schema:
+            type: "string"
+      responses:
+        "101":
+          description: "Switching Protocols"
+          headers:
+            Connection:
+              required: true
+              schema:
+                type: "string"
+            Upgrade:
+              required: true
+              schema:
+                type: "string"
+            Sec-WebSocket-Accept:
+              required: true
+              schema:
+                type: "string"
 components:
   schemas:
     User:
@@ -140,17 +211,6 @@ components:
         lng:
           type: "number"
           format: "double"
-    Trace:
-      type: "object"
-      properties:
-        id:
-          type: "integer"
-          format: "int32"
-        latLng:
-          $ref: "#/components/schemas/LatLng"
-        stop:
-          type: "integer"
-          format: "int32"
     Stop:
       type: "object"
       properties:
@@ -159,11 +219,11 @@ components:
           format: "int32"
         name:
           type: "string"
+        latLng:
+          $ref: "#/components/schemas/LatLng"
         len:
           type: "integer"
           format: "int32"
-        trace:
-          $ref: "#/components/schemas/Trace"
     Route:
       type: "object"
       properties:
@@ -186,3 +246,22 @@ components:
           $ref: "#/components/schemas/Stop"
         lastStop:
           $ref: "#/components/schemas/Stop"
+    Trace:
+      type: "object"
+      properties:
+        id:
+          type: "integer"
+          format: "int32"
+        latLng:
+          $ref: "#/components/schemas/LatLng"
+        stop:
+          $ref: "#/components/schemas/Stop"
+    FullRoute:
+      type: "object"
+      properties:
+        route:
+          $ref: "#/components/schemas/Route"
+        traces:
+          type: "array"
+          items:
+            $ref: "#/components/schemas/Trace"
